r130:

r129:
Added  : LZ4_compress_fast(), LZ4_compress_fast_continue()
Added  : LZ4_compress_destSize()
Changed: New lz4 and lz4hc compression API. Previous function prototypes still supported.
Changed: Sparse file support enabled by default
New    : LZ4 CLI improved performance compressing/decompressing multiple files (#86, kind contribution from Kyle J. Harper & Takayuki Matsuoka)
Fixed  : GCC 4.9+ optimization bug - Reported by Markus Trippelsdorf, Greg Slazinski & Evan Nemerson
Changed: Enums converted to LZ4F_ namespace convention - by Takayuki Matsuoka
Added  : AppVeyor CI environment, for Visual tests - Suggested by Takayuki Matsuoka
Modified:Obsolete functions generate warnings - Suggested by Evan Nemerson, contributed by Takayuki Matsuoka
Fixed  : Bug #75 (unfinished stream), reported by Yongwoon Cho
Updated: Documentation converted to MarkDown format

r128:
New    : lz4cli sparse file support (Requested by Neil Wilson, and contributed by Takayuki Matsuoka)
New    : command -m, to compress multiple files in a single command (suggested by Kyle J. Harper)
Fixed  : Restored lz4hc compression ratio (slightly lower since r124)
New    : lz4 cli supports long commands (suggested by Takayuki Matsuoka)
New    : lz4frame & lz4cli frame content size support
New    : lz4frame supports skippable frames, as requested by Sergey Cherepanov
Changed: Default "make install" directory is /usr/local, as notified by Ron Johnson
New    : lz4 cli supports "pass-through" mode, requested by Neil Wilson
New    : datagen can generate sparse files
New    : scan-build tests, thanks to kind help by Takayuki Matsuoka
New    : g++ compatibility tests
New    : arm cross-compilation test, thanks to kind help by Takayuki Matsuoka
Fixed  : Fuzzer + frametest compatibility with NetBSD (issue #48, reported by Thomas Klausner)
Added  : Visual project directory
Updated: Man page & Specification

r127:
N/A   : added a file on SVN

r126:
New   : lz4frame API is now integrated into liblz4